# mattilda-challenge

./: .env.example  .gitignore  CLAUDE.md  DATABASE.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.aws/: README.md  cloudformation-template.yml  task-definition.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_users_table.py  003_add_report_views.py  004_update_report_views.py  005_remove_grades_billing_items.py  1c309ae71d2f_add_grades_and_billing_items.py
postman/: Mattilda_API.postman_collection.json
scripts/: seed.py  seed_data.py
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  agent.py  schemas.py
src/api/: __init__.py  cache_decorator.py  dependencies.py  middlewares.py  rate_limiter.py
src/api/auth/: __init__.py  jwt.py  models.py
src/api/routes/: __init__.py  ai.py  auth.py  billing_items.py  grades.py  invoices.py  payments.py  reports.py  schools.py  students.py
src/api/schemas/: __init__.py  billing_item.py  common.py  grade.py  invoice.py  payment.py  school.py  statements.py  student.py
src/application/: __init__.py
src/application/dto/: __init__.py  statements.py
src/domain/: __init__.py  enums.py  event_dispatcher.py  events.py  exceptions.py
src/infrastructure/: event_handlers.py
tests/: conftest.py
tests/integration/: test_invoices_api.py  test_payments_api.py  test_schools_api.py  test_statements_api.py  test_students_api.py
tests/unit/: test_domain.py  test_invoice_service.py
(+37 files in other folders)
